# Rust-LWE-project

./: .gitmodules  README2.md  docker-compose.yml  end.bat  run.bat  test.bat  writeup.md
.cargo/: config.toml
challenge/: Cargo.toml
challenge/bonus/.cargo/: config.toml
challenge/bonus/challenge/: Cargo.toml  README3.md
challenge/bonus/challenge/7-26-1/c_src/: foo.c  mul.cpp
challenge/bonus/challenge/7-26-1/c_src/include/: foo.h  mathlib.h
challenge/bonus/challenge/7-26-2/: build.rs
challenge/bonus/challenge/7-26-2/src/: main.rs
challenge/bonus/challenge/7-26-2/wrapper/: fplll_wrapper.hpp
challenge/bonus/challenge/old/7-26-1/: build.rs
challenge/bonus/challenge/src/: lll.rs  main.rs  solver.rs
challenge/bonus/challenge/src/7-25-2/: solver.rs
challenge/bonus/challenge/src/7-25-tmp/: lll.rs
challenge/bonus/challenge/src/7-28-1/: lll.rs  main.rs
challenge/bonus/challenge/src/7-29-1/: main.rs  solver.rs
challenge/bonus/challenge/src/7-29-2/: lll.rs  main.rs  solver.rs
challenge/bonus/challenge/src/7-30-2/: main.rs  solver.rs
challenge/bonus/challenge/src/8-1-1/: main.rs  solver.rs
challenge/bonus/challenge/src/8-1-2tmp/: solver.rs
challenge/src/: client.rs  main.rs
challenge/src/7-23-1/: server.rs
challenge/src/7-23-2/: server.rs
challenge/src/7-24-1/: server.rs
challenge/src/7-24-2/: server.rs
challenge/src/7-24-3/: server.rs
challenge/src/7-25-1/: client.rs
challenge/src/7-25-2/: client.rs  server.rs
challenge/src/fast/: client.rs  main.rs  server.rs
challenge/src/origin/: Cargo.toml  docker-compose.yml
(+17 files in other folders)
