[package]
name = "sustcsc-rs-bonus"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.9.2"
lll-rs = "0.2.0"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rayon = "1.5"
num = "0.4"
libc = "0.2.174"

[build-dependencies]
cc = "1.2.30"                 # 编译 C
bindgen = "0.72.0"           # 自动生成 Rust 绑定（可选但强烈推荐）
glob = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'